  by Tim Moore, ported to SBCL by Martin Atzmueller.
* Martin Atzmueller fixed several filesystem-related problems,
  including bug #36, in part by porting CMU CL patches, which were
  written in part by Paul Werkowski.
* More compiler warnings in src/runtime/ are gone, thanks to 
  more patches from Martin Atzmueller.
* Martin Atzmueller pointed out that bug 37 was fixed by his patches
  some time ago.

changes in sbcl-0.6.11 relative to sbcl-0.6.10:
* The Gray subclassable streams extension now works, thanks to a 
  patch from Martin Atzmueller.
* The full LOAD-FOREIGN extension (not just the primitive
  LOAD-FOREIGN-1) now works, thanks to a patch from Martin Atzmueller.
* The default behavior of RUN-PROGRAM has changed. Now, unlike CMU CL
  but like most other programs, it defaults to copying the Unix
  environment from the original process instead of starting the
  new process in an empty environment.
* Extensions which manipulate the Unix environment now support
  an :ENVIRONMENT keyword option which doesn't smash case or 
  do other bad things. The CMU-CL-style :ENV option is retained
  for porting convenience.
* DESCRIBE now works on structure objects again.
* Fasl file format version numbers have increased again, because
  support for the Gray streams extension changes the format of the
  system's stream objects.

planned incompatible changes in 0.7.x:
* The debugger prompt sequence now goes "5]", "5[2]", "5[3]", etc.
  as you get deeper into recursive calls to the debugger command loop,
  instead of the old "5]", "5]]", "5]]]" sequence. (I was motivated
  to do this when ILISP and SBCL got into arguments which left me
  deeply nested in the debugger.)
* When the profiling interface settles down, it might impact TRACE.
  They both encapsulate functions, and it's not clear yet how
  e.g. UNPROFILE will interact with TRACE and UNTRACE. (This shouldn't
  matter, though, unless you are using profiling.)